crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_modules_setup_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import { ref } from "vue";async()=>{export default {};<><template><div></div></template><script setup></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 116,
        },
        original_span: Span {
            start: 0,
            end: 113,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 26,
        },
        original_span: Span {
            start: 57,
            end: 83,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 36,
            end: 53,
        },
        original_span: Span {
            start: 85,
            end: 102,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 56,
            end: 88,
        },
        original_span: Span {
            start: 0,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 56,
            end: 66,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 57,
            end: 65,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 66,
            end: 77,
        },
        original_span: Span {
            start: 13,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 66,
            end: 71,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 70,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 71,
            end: 77,
        },
        original_span: Span {
            start: 22,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 73,
            end: 76,
        },
        original_span: Span {
            start: 24,
            end: 27,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 77,
            end: 88,
        },
        original_span: Span {
            start: 29,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 79,
            end: 87,
        },
        original_span: Span {
            start: 31,
            end: 39,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 88,
            end: 111,
        },
        original_span: Span {
            start: 42,
            end: 112,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 88,
            end: 102,
        },
        original_span: Span {
            start: 42,
            end: 56,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 89,
            end: 95,
        },
        original_span: Span {
            start: 43,
            end: 49,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 96,
            end: 101,
        },
        original_span: Span {
            start: 50,
            end: 55,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 102,
            end: 111,
        },
        original_span: Span {
            start: 103,
            end: 112,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 104,
            end: 110,
        },
        original_span: Span {
            start: 105,
            end: 111,
        },
    },
]
