crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_scripts_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

const count = 0;export default {
  data() {
    return {
      count
    }
  }
};async()=>{<><template><div></div></template><script></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 147,
        },
        original_span: Span {
            start: 0,
            end: 148,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 15,
        },
        original_span: Span {
            start: 55,
            end: 70,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 16,
            end: 80,
        },
        original_span: Span {
            start: 72,
            end: 136,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 93,
            end: 125,
        },
        original_span: Span {
            start: 0,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 93,
            end: 103,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 94,
            end: 102,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 103,
            end: 114,
        },
        original_span: Span {
            start: 13,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 103,
            end: 108,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 104,
            end: 107,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 108,
            end: 114,
        },
        original_span: Span {
            start: 26,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 110,
            end: 113,
        },
        original_span: Span {
            start: 28,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 114,
            end: 125,
        },
        original_span: Span {
            start: 33,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 116,
            end: 124,
        },
        original_span: Span {
            start: 35,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 125,
            end: 142,
        },
        original_span: Span {
            start: 46,
            end: 146,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 125,
            end: 133,
        },
        original_span: Span {
            start: 46,
            end: 54,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 126,
            end: 132,
        },
        original_span: Span {
            start: 47,
            end: 53,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 133,
            end: 142,
        },
        original_span: Span {
            start: 137,
            end: 146,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 135,
            end: 141,
        },
        original_span: Span {
            start: 139,
            end: 145,
        },
    },
]
