crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_scripts_directive_prologue_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

"use strict";"use asm";semiFunctionCall();export const x = 1;async()=>{functionCallWithoutSemi();<><script></script><script setup></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 144,
        },
        original_span: Span {
            start: 0,
            end: 133,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 12,
        },
        original_span: Span {
            start: 9,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 22,
        },
        original_span: Span {
            start: 22,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 23,
            end: 42,
        },
        original_span: Span {
            start: 32,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 42,
            end: 60,
        },
        original_span: Span {
            start: 52,
            end: 70,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 71,
            end: 96,
        },
        original_span: Span {
            start: 97,
            end: 122,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 99,
            end: 116,
        },
        original_span: Span {
            start: 0,
            end: 80,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 99,
            end: 107,
        },
        original_span: Span {
            start: 0,
            end: 8,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 100,
            end: 106,
        },
        original_span: Span {
            start: 1,
            end: 7,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 107,
            end: 116,
        },
        original_span: Span {
            start: 71,
            end: 80,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 109,
            end: 115,
        },
        original_span: Span {
            start: 73,
            end: 79,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 116,
            end: 139,
        },
        original_span: Span {
            start: 82,
            end: 132,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 116,
            end: 130,
        },
        original_span: Span {
            start: 82,
            end: 96,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 117,
            end: 123,
        },
        original_span: Span {
            start: 83,
            end: 89,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 124,
            end: 129,
        },
        original_span: Span {
            start: 90,
            end: 95,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 130,
            end: 139,
        },
        original_span: Span {
            start: 123,
            end: 132,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 132,
            end: 138,
        },
        original_span: Span {
            start: 125,
            end: 131,
        },
    },
]
