crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_scripts_empty_multiple_scripts_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

const a = 1;async()=>{<><script></script><script></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 63,
        },
        original_span: Span {
            start: 0,
            end: 53,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 12,
        },
        original_span: Span {
            start: 9,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 24,
            end: 41,
        },
        original_span: Span {
            start: 0,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 24,
            end: 32,
        },
        original_span: Span {
            start: 0,
            end: 8,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 25,
            end: 31,
        },
        original_span: Span {
            start: 1,
            end: 7,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 32,
            end: 41,
        },
        original_span: Span {
            start: 22,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 34,
            end: 40,
        },
        original_span: Span {
            start: 24,
            end: 30,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 41,
            end: 58,
        },
        original_span: Span {
            start: 33,
            end: 52,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 41,
            end: 49,
        },
        original_span: Span {
            start: 33,
            end: 41,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 42,
            end: 48,
        },
        original_span: Span {
            start: 34,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 49,
            end: 58,
        },
        original_span: Span {
            start: 43,
            end: 52,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 51,
            end: 57,
        },
        original_span: Span {
            start: 45,
            end: 51,
        },
    },
]
