crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_scripts_mapping_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

1;async()=>{<><script></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 36,
        },
        original_span: Span {
            start: 0,
            end: 22,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 2,
        },
        original_span: Span {
            start: 9,
            end: 11,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 14,
            end: 31,
        },
        original_span: Span {
            start: 0,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 14,
            end: 22,
        },
        original_span: Span {
            start: 0,
            end: 8,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 15,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 7,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 31,
        },
        original_span: Span {
            start: 12,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 24,
            end: 30,
        },
        original_span: Span {
            start: 14,
            end: 20,
        },
    },
]
