crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_scripts_setup_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import { ref } from 'vue';async()=>{const count = ref(0);<><template><div></div></template><script setup></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 119,
        },
        original_span: Span {
            start: 0,
            end: 119,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 25,
        },
        original_span: Span {
            start: 61,
            end: 86,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 36,
            end: 56,
        },
        original_span: Span {
            start: 88,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 59,
            end: 91,
        },
        original_span: Span {
            start: 0,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 59,
            end: 69,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 60,
            end: 68,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 80,
        },
        original_span: Span {
            start: 13,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 74,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 70,
            end: 73,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 74,
            end: 80,
        },
        original_span: Span {
            start: 26,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 76,
            end: 79,
        },
        original_span: Span {
            start: 28,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 80,
            end: 91,
        },
        original_span: Span {
            start: 33,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 82,
            end: 90,
        },
        original_span: Span {
            start: 35,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 91,
            end: 114,
        },
        original_span: Span {
            start: 46,
            end: 118,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 91,
            end: 105,
        },
        original_span: Span {
            start: 46,
            end: 60,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 92,
            end: 98,
        },
        original_span: Span {
            start: 47,
            end: 53,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 99,
            end: 104,
        },
        original_span: Span {
            start: 54,
            end: 59,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 105,
            end: 114,
        },
        original_span: Span {
            start: 109,
            end: 118,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 107,
            end: 113,
        },
        original_span: Span {
            start: 111,
            end: 117,
        },
    },
]
