crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_special_template_tokens_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{<><template><svg></svg><title></title><textarea></textarea>{}{}</template></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 89,
        },
        original_span: Span {
            start: 0,
            end: 114,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 84,
        },
        original_span: Span {
            start: 0,
            end: 113,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 22,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 33,
        },
        original_span: Span {
            start: 13,
            end: 24,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 27,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 23,
            end: 26,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 27,
            end: 33,
        },
        original_span: Span {
            start: 18,
            end: 24,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 29,
            end: 32,
        },
        original_span: Span {
            start: 20,
            end: 23,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 33,
            end: 48,
        },
        original_span: Span {
            start: 27,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 33,
            end: 40,
        },
        original_span: Span {
            start: 27,
            end: 34,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 34,
            end: 39,
        },
        original_span: Span {
            start: 28,
            end: 33,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 40,
            end: 48,
        },
        original_span: Span {
            start: 43,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 42,
            end: 47,
        },
        original_span: Span {
            start: 45,
            end: 50,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 48,
            end: 69,
        },
        original_span: Span {
            start: 54,
            end: 76,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 48,
            end: 58,
        },
        original_span: Span {
            start: 54,
            end: 64,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 49,
            end: 57,
        },
        original_span: Span {
            start: 55,
            end: 63,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 58,
            end: 69,
        },
        original_span: Span {
            start: 65,
            end: 76,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 60,
            end: 68,
        },
        original_span: Span {
            start: 67,
            end: 75,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 71,
        },
        original_span: Span {
            start: 79,
            end: 87,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 71,
            end: 73,
        },
        original_span: Span {
            start: 90,
            end: 101,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 73,
            end: 84,
        },
        original_span: Span {
            start: 102,
            end: 113,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 75,
            end: 83,
        },
        original_span: Span {
            start: 104,
            end: 112,
        },
    },
]
