crates/vue_oxlint_jsx/src/test/snapshots/codegen/root_texts_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
async () => {
	<><template></template><script></script><script></script><style></style></>;
};
