crates/vue_oxlint_jsx/src/test/snapshots/codegen/scripts_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
const count = 0;
export default { data() {
	return { count };
} };
async () => {
	<><template><div></div></template><script></script></>;
};
